[package]
name = "casec"
version = "0.1.2"
authors = ["Mateusz Szczygiel <mateuszszczygiel95@gmail.com>"]
edition = "2018"
license = "MIT"
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/matszczygiel/casec"
description = "A command-line tool for changing the cammel case and the snake case into each other."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
structopt = "0.3.13"
